# game-of-life

./: Cargo.toml  Game.tscn  export_presets.cfg  game-of-life.gdnlib  project.godot  vm_controller.gd
.import/: 8x.png-c0d8bd1f6c5c563797a00170f06cc150.md5  8x.png-f1e72e7fdc54002a5bc4da61f0909c94.etc2.stex  8x.png-f1e72e7fdc54002a5bc4da61f0909c94.md5  8x.png-f1e72e7fdc54002a5bc4da61f0909c94.res  8x.png-f1e72e7fdc54002a5bc4da61f0909c94.s3tc.stex  PickAxe.obj-79b311ef092c8fcfc4b94bd1a66ee586.md5  ground.png-131ed0c5386564d43b6483668baf5a82.md5  ground.png-19dd19062ae149a099889071e7b87881.md5  ground.png-19dd19062ae149a099889071e7b87881.stex  ground.png-5cb87f3e2b4055e821a79c5bf3b0df8c.etc2.stex  ground.png-5cb87f3e2b4055e821a79c5bf3b0df8c.s3tc.stex  pickaxe.escn-eed3357bdabd6d67f9ca16205c9dc0be.md5  pickaxe.escn-eed3357bdabd6d67f9ca16205c9dc0be.scn  scene.gltf-becb726ae5eeee31d3232acaf8017d9f.md5  slime.escn-799e46e4f52e39cb4ebbc72cbb756bb7.md5  slime.png-9174b73a36c340e3a8e0980a533060e0.md5  slime_diffuse.png-9663694b4f0af904b7e5cc6e2b0bd4f4.md5  spritesheet.png-1a1b4090003dbbb1678887a5c8ea123a.md5  spritesheet.png-1a1b4090003dbbb1678887a5c8ea123a.res  spritesheet.png-1a1b4090003dbbb1678887a5c8ea123a.stex
godot/: Game.tscn  GameOfLife.gdns  VoxelMesh.gdns  game-of-life.gdnlib  game_of_life_controller.gd  pickaxe.tscn  project.godot  rounded.shader
images/: ground.png.import
materials/: ground.material  ground.png.import  old-ground.material
models/: pickaxe.escn.import
native/game-of-life/: Cargo.toml
native/game-of-life/src/: game_of_life.rs  lib.rs
(+16 files in other folders)
