[package]
name = "game-of-life"
version = "0.1.0"
authors = ["Lyon Beckers <lyonbeckers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
gdnative = "0.9"
lazy_static = "1.4"
legion = "0.4"
nalgebra = "0.25"
octree = { git = "https://github.com/lyonbeckers/rs-octree", rev = "9bc2e7b" }
parking_lot = "0.11"
rayon = "1.5"

[lib]
crate-type = ["cdylib"]