[package]
name = "game-of-life"
version = "0.1.0"
authors = ["Lyon Beckers <lyonbeckers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "0.9"
legion = "0.4"
nalgebra = "0.25"
octree = { git = "https://github.com/lyonbeckers/rs-octree", rev = "c0a31df" }
rand = "0.8"
rayon = "1.5"
crossbeam-channel = "0.5"
voxel-mesh = { path = "../voxel-mesh" }

[lib]
crate-type = ["cdylib"]
